--- a/themes/artistsite/assets/css/src/about.scss
+++ b/themes/artistsite/assets/css/src/about.scss
@@ -5,10 +5,10 @@
 .top-layer {
 	background-image: $backgroundTexture; 
 	background-repeat: repeat;
-	margin-top: 400px;
+	margin-top: 300px;
 	z-index: 1;
-	@media #{$media-mobile} {
-		margin-top: 300px;
+	@media #{$medium} {
+		margin-top: 400px;
 	}
 }
 
@@ -16,19 +16,19 @@
 	background: black;
 	position: fixed;
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	z-index: -1;
-	@media #{$media-mobile} {
-		height: 300px;
+	@media #{$medium} {
+		height: 400px;
 	}
 }
 
 .img-span-img {
 	display: block;
-	margin: 0 0 0 auto;
-	transform: scale(0.9) translate(150px, -250px);
-	@media #{$media-mobile} {
-		margin: 0;
-		transform: scale(0.75) translate(-570px, -420px);
+	margin: 0;
+	transform: scale(0.75) translate(-570px, -420px);
+	@media #{$medium} {
+		margin: 0 0 0 auto;
+		transform: scale(0.9) translate(150px, -250px);
 	}
 }
