--- a/themes/artistsite/assets/css/src/artistsites.scss
+++ b/themes/artistsite/assets/css/src/artistsites.scss
@@ -14,10 +14,10 @@
 	}
 }
 #AS-button {
-	margin: 50px 0 75px 0;
+	margin: 50px auto 75px;
 
 	@media #{$media-mobile} {
-		margin: 10px 0 25px;
+		margin: 10px auto 25px;
 	}
 }
 
