--- a/themes/artistsite/assets/css/src/landing_page.scss
+++ b/themes/artistsite/assets/css/src/landing_page.scss
@@ -20,16 +20,16 @@
 	z-index: 5;
 	color: white;
 	@media #{$media-mobile} {
-	
+		top: 15%;
 	}
 	> h1 {
 		position: relative;
-		font-size: 300%;
+		font-size: 4rem;
 		margin: 30px;
 		@media #{$media-mobile} {
 			//text-align: right;
 			margin: 0;
-			font-size: 150%;
+			font-size: 2rem;
 		}
 		
 	}
@@ -39,11 +39,11 @@
 		align-items: center;
 		justify-content: center;
 		width: 100%;
-		font-size: 200%;
+		font-size: 2rem;
 		margin-top: 30px;
 		> a {
 			color: $splashColor;
-			font-size: 75%;
+			font-size: 0.75em;
 			padding: 15px;
 			margin: 10px;
 			background: transparent;
@@ -57,14 +57,14 @@
 
 		}
 		@media #{$media-mobile} {
-			font-size: 150%;
+			font-size: 1.5rem;
 			flex-direction: column;
 			margin: 0;
 			a {
 				margin-top: 15px;
 				padding: 15px;
 				line-height: 100%;
-				min-width: 180px;
+				width: 220px;
 				&:hover {
 					color: $splashColor;
 					background: $backgroundColor;
@@ -79,7 +79,7 @@
 		flex-wrap: wrap;
 		margin-top: 20px;
 		justify-content: center;
-		font-size: 90%;
+		font-size: 0.9rem;
 		font-style: italic;
 		> li {
 			margin: 0 20px 0 20px;
