--- a/themes/artistsite/assets/css/src/contact.scss
+++ b/themes/artistsite/assets/css/src/contact.scss
@@ -124,3 +124,14 @@
 
 	}
 }
+
+
+.secret {
+	display: block;
+	width: 50%;
+	margin: 0 auto;
+	height: 0px;
+	opacity: 0;
+	transition: height 500ms, opacity 500ms;
+}
+
