--- a/themes/artistsite/layouts/base-background.htm
+++ b/themes/artistsite/layouts/base-background.htm
@@ -5,7 +5,7 @@ function onStart() {
     'home'=>'/',
     'about'=>'/about',
     'schedule'=>'/schedule',
-    'artistsites'=>'/artistsites',
+    'artistsites'=>'/web',
     'instruments'=>'/instruments',
     'music'=>'/music',
     'blog'=>'/writing',
