--- a/themes/artistsite/assets/css/src/base.scss
+++ b/themes/artistsite/assets/css/src/base.scss
@@ -240,3 +240,43 @@ a {
 		font-size: 1.25rem;
 	}
 }
+
+.buttons-array {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	font-size: 0.5rem;
+	@media #{$medium} {
+		font-size: 1rem;
+	}
+	> div {
+		padding: 10px;
+		margin: 10px;
+		cursor: pointer;
+		border: $borderColor_B 2px solid;
+		border-radius: 3px;
+		color: $buttonText;
+		background: $buttonBG;
+		&:hover {
+			color: $buttonText-hover;
+			background: $buttonBG-hover;
+
+		}
+	}
+	&:hover + .secret {
+		height: 150px;
+		opacity: 1;
+	}
+}
+
+.spacer-50 {
+	min-height: 50px;
+	margin: 0;
+	padding: 0;
+}
+
+.spacer-25 {
+	min-height: 25px;
+	margin: 0;
+	padding: 0;
+}
