--- a/themes/artistsite/assets/css/src/contact.scss
+++ b/themes/artistsite/assets/css/src/contact.scss
@@ -128,10 +128,20 @@
 
 .secret {
 	display: block;
+	overflow: hidden;
 	width: 50%;
-	margin: 0 auto;
+	font-size: 1.5em;
+	margin: 0px auto;
 	height: 0px;
 	opacity: 0;
-	transition: height 500ms, opacity 500ms;
+	transition: margin 500ms, height 500ms, opacity 500ms;
+}
+.opensecret {
+	margin: 25px auto;
+	height: 200px;
+	opacity: 1;
 }
 
+.force-scroll {
+	overflow-y: scroll;
+}
