update javascript contact form page

--- a/plugins/camsexton/contact/components/contactform/default.htm
+++ b/plugins/camsexton/contact/components/contactform/default.htm
@@ -3,7 +3,7 @@
 		<div>
 			<div id="contact-inputs">
 				Your Name:<br>
-				<input type="text" name="name">
+				<input type="text" name="name" autofocus>
 				<div data-validate-for="name"></div>
 				<br>
 				Your Email:<br>
