--- a/themes/artistsite/assets/css/src/contact.scss
+++ b/themes/artistsite/assets/css/src/contact.scss
@@ -84,64 +84,26 @@
 	visibility: visible;
 }
 
-#cts-radioButtons {
-	margin: 20px;
-	input[type="radio"] {
-		display: none;
-	}
-
-	input[type="radio"] + label:before {
-		background-color: white;
-		border: 3px solid #ccc;
-		border-radius: 50%;
-		content: "";
-		display: inline-block;
-		font-size: 100%;
-		height: 16px;
-		width: 16px;
-		line-height: 100%;
-		margin: 5px 10px 10px 0;
-		vertical-align: middle;
-		cursor: pointer;
-		@media #{$media-mobile} {
-			height: 8px;
-			width: 8px;
-			margin: 3px 5px 5px 0;
-		}
-	}
-	input[type="radio"]:checked + label:before {
-		content: "";
-		text-align: center;
-		font-weight: bold;
-		background-color: #333;
-	}
-	> label {
-		cursor: pointer;
-		@media #{$media-mobile} {
-			font-size: 125%;
-			line-height: 150%;
-		}
-
-	}
-}
-
-
 .secret {
 	display: block;
 	overflow: hidden;
 	width: 50%;
 	font-size: 1.5em;
-	margin: 0px auto;
-	height: 0px;
+	margin: 0px auto 0px;
+	height: 0;
 	opacity: 0;
-	transition: margin 500ms, height 500ms, opacity 500ms;
+	transition: margin 500ms, opacity 500ms, height 500ms;
 }
 .opensecret {
-	margin: 25px auto;
-	height: 200px;
+	margin: 25px auto 10px;
+	height: 6em;
 	opacity: 1;
 }
 
 .force-scroll {
 	overflow-y: scroll;
+}
+.highlightButton {
+	color: $buttonText-hover!important;
+	background: $buttonBG-hover!important;
 }
