--- a/themes/artistsite/assets/css/src/about.scss
+++ b/themes/artistsite/assets/css/src/about.scss
@@ -5,10 +5,10 @@
 .about--layer {
 	background-image: $backgroundTexture; 
 	background-repeat: repeat;
-	margin-top: 300px;
+	margin-top: 350px;
 	z-index: 1;
 	@media #{$medium} {
-		margin-top: 400px;
+		margin-top: 400px; // Height of image. Dimensions are 400 x 1051
 	}
 }
 
@@ -25,11 +25,12 @@
 
 .img-span-img {
 	display: block;
-	margin: 0;
-	transform: scale(0.75) translate(-570px, -420px);
-	@media #{$medium} {
-		margin: 0 0 0 auto;
-		transform: scale(0.9) translate(150px, -250px);
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 1051px;
+	@media screen and (max-width: 600px) {
+		right: -270px;
 	}
 }
 
