improve contact form

--- a/plugins/camsexton/contact/components/contactform/default.htm
+++ b/plugins/camsexton/contact/components/contactform/default.htm
@@ -3,11 +3,11 @@
 		<div>
 			<div id="contact-inputs">
 				Your Name:<br>
-				<input type="text" name="name" autofocus>
+				<input type="text" name="name" autocomplete="name" autofocus>
 				<div data-validate-for="name"></div>
 				<br>
 				Your Email:<br>
-				<input type="text" name="email">
+				<input type="text" autocomplete="email" name="email">
 				<div data-validate-for="email"></div>
 				<br>
 			</div>
