--- a/themes/artistsite/assets/css/src/contact.scss
+++ b/themes/artistsite/assets/css/src/contact.scss
@@ -2,6 +2,82 @@
  * CONTACT FORM
  */
 
+.CT--heading-top {
+	font-size: 1.6rem;
+	font-family: $fontB;
+	font-weight: 400;
+	line-height: 1.25em;
+	text-align: center;
+	margin: 0 0 25px;
+	@media #{$medium} {
+		font-size: 2.5rem;
+		margin: 0 0 50px;
+	}
+}
+
+.CT--buttons-array {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	font-size: 1rem;
+	@media #{$medium} {
+		font-size: 1.5rem;
+	}
+	> div {
+		padding: 10px;
+		margin: 10px;
+		width: 200px;
+		text-align: center;
+		vertical-align: middle;
+		cursor: pointer;
+		border: $borderColor_B 2px solid;
+		border-radius: 3px;
+		color: $buttonText;
+		background: $buttonBG;
+		&:hover {
+			color: $buttonText-hover;
+			background: $buttonBG-hover;
+
+		}
+		@media screen and (min-width: 900px) {
+			width: auto;
+		}
+	}
+}
+
+.highlightButton {
+	color: $buttonText-hover!important;
+	background: $buttonBG-hover!important;
+}
+
+.secret {
+	display: block;
+	overflow: hidden;
+	width: 95%;
+	font-size: 1em;
+	margin: 0px auto 0px;
+	height: 0;
+	opacity: 0;
+	transition: margin 500ms, opacity 500ms, height 500ms;
+	@media screen and (min-width: 900px) {
+		width: 35%;
+		font-size: 1.5em;
+	}
+}
+.opensecret {
+	margin: 25px auto 10px;
+	height: 7.25em;
+	opacity: 1;
+	@media screen and (min-width: 900px) {
+		height: 6em;
+	}
+}
+
+.force-scroll {
+	overflow-y: scroll;
+}
+
+// CONTACT FORM PLUGIN
 .contact-form {
 	display: inline-block;
 	padding: 30px;
@@ -20,6 +96,11 @@
 		margin: 10px 0 10px 0;
 		border: #999 1px solid;
 		border-radius: 3px;
+	}
+	input[type="text"] {
+		@media #{$large} {
+			width: 45%;
+		}
 	}
 	button {
 		font-size: 120%;
@@ -43,67 +124,4 @@
 
 	}
 }
-#contact-inputs {
-	display: inline-block;
-	width: 45%;
-	vertical-align: top;
-	@media #{$media-mobile} {
-		width: 100%;
-	}
-}
-#contact-info {
-	display: inline-block;
-	vertical-align: top;
-	width: 50%;
-	float: right;
-	padding: 15px;
-	background: rgba(230,180,10,0.1);
-	line-height: 100%;
-	ul {
-		margin: 10px;
-		li {
-			line-height: 150%;
-		}
-	}
-	@media #{$media-mobile} {
-		width: 100%;
-		line-height: 120%;
-		ul { 
-			margin: 5px;
-			li {
-				line-height: 120%;
-			}
-		}
-	}
-}
 
-.contact-info__invisible {
-	visibility: hidden;
-}
-.contact-info__visible {
-	visibility: visible;
-}
-
-.secret {
-	display: block;
-	overflow: hidden;
-	width: 50%;
-	font-size: 1.5em;
-	margin: 0px auto 0px;
-	height: 0;
-	opacity: 0;
-	transition: margin 500ms, opacity 500ms, height 500ms;
-}
-.opensecret {
-	margin: 25px auto 10px;
-	height: 6em;
-	opacity: 1;
-}
-
-.force-scroll {
-	overflow-y: scroll;
-}
-.highlightButton {
-	color: $buttonText-hover!important;
-	background: $buttonBG-hover!important;
-}
