--- a/themes/artistsite/partials/top-menu.htm
+++ b/themes/artistsite/partials/top-menu.htm
@@ -1,5 +1,5 @@
 ==
-<nav>
+<div class="nav">
 	<a href="{{ navlinks.home }}" id="home-button">cam sexton</a>
     <div id="nav--main-list" class="nav--main-list nav--main-list__closed">
         <a class="nice-border" href="{{ navlinks.about }}">about</a>
@@ -17,4 +17,4 @@
         <a class="nice-border" href="{{ navlinks.contact }}">contact</a>
     </div>
 	<div id="menu-button">menu</div>
-</nav>
+</div>
