replace menu text with menu symbols

--- a/themes/artistsite/partials/top-menu.htm
+++ b/themes/artistsite/partials/top-menu.htm
@@ -16,5 +16,5 @@
 		</div>
         <a class="nice-border" href="{{ navlinks.contact }}">contact</a>
     </div>
-	<div id="menu-button">menu</div>
+	<div id="menu-button">≡</div>
 </div>
