--- a/themes/artistsite/assets/css/src/navigation.scss
+++ b/themes/artistsite/assets/css/src/navigation.scss
@@ -232,11 +232,11 @@
 #menu-button {
 	position: relative;
 	display: inline-block;
-	margin-right: 5px;
-	letter-spacing: 0.05em;
+	padding: 0 10px 5px 0;
 	text-align: right;
+	line-height: 1em;
 	font-family: $fontB;
-	font-size: 1rem;
+	font-size: 2.5rem;
 	cursor: pointer;
 	@media #{$large} {
 		display: none;
