--- a/themes/artistsite/assets/css/src/navigation.scss
+++ b/themes/artistsite/assets/css/src/navigation.scss
@@ -232,7 +232,7 @@
 #menu-button {
 	position: relative;
 	display: inline-block;
-	padding: 0 10px 5px 0;
+	padding: 5px 10px 0 0;
 	text-align: right;
 	line-height: 1em;
 	font-family: $fontB;
