fix javascript contact form

--- a/themes/artistsite/layouts/base-wide.htm
+++ b/themes/artistsite/layouts/base-wide.htm
@@ -29,7 +29,8 @@ function onStart() {
         <footer>
         <script src="{{ [
                 '@jquery',
-                'assets/javascript/app.js'
+                'assets/javascript/app.js',
+				'assets/javascript/contact.js'
             ]|theme }}">
         </script>
 		{% framework extras %}
