--- a/themes/artistsite/assets/css/src/base.scss
+++ b/themes/artistsite/assets/css/src/base.scss
@@ -14,7 +14,6 @@ body {
 %cts-body {
 	display: flex;
 	flex-direction: column;
-	padding-top: 50px;
 	font-family: $fontA;
 	letter-spacing: 0.01em;
 	line-height: 150%;
@@ -22,12 +21,13 @@ body {
 }
 
 #cts-body {
-	width: 50%;
+	width: 100%;
 	margin: 0 auto;
+	padding: 50px 10px 10px 10px;
 	@extend %cts-body;
-	@media #{$media-mobile} {
-		width: 100%;
-		padding: 50px 10px 10px 10px;
+	@media #{$media-desktop} {
+		width: 50%;
+		padding: 50px 0 0 0;
 	}
 }
 
@@ -38,7 +38,7 @@ body {
 
 #cts-body__wide {
 	width: 100%;
-	padding-top: 50px;
+	padding: 50px 0 0 0;
 	@extend %cts-body;
 }
 
@@ -195,9 +195,9 @@ a {
 	font-family: $fontB; 
 	font-weight: 400;
 	font-size: 2.5rem;
-	line-height: 150%;
-	@media #{$media-mobile} {
-		line-height: 125%;
+	line-height: 125%;
+	@media #{$media-desktop} {
+		line-height: 150%;
 	}
 }
 
@@ -211,8 +211,9 @@ a {
 .fat-big-text {
 	width: 100%; 
 	text-align: center; 
-	@media #{$media-mobile} {
-		margin: 15px 0 15px 0;
+	margin: 15px 0 15px 0;
+	@media #{$media-desktop} {
+		margin: auto;
 	}
 }
 
@@ -233,7 +234,7 @@ a {
 	border-radius: 3px;
 	color: $buttonText;
 	background: $buttonBG;
-
+	font-size: 1.25rem;
 	@media #{$media-desktop}
 	{ 
 		font-size: 2rem;
@@ -241,10 +242,6 @@ a {
 			color: $buttonText-hover;
 			background: $buttonBG-hover;
 		}
-	}
-
-	@media #{$media-mobile} {
-		font-size: 1.25rem;
 	}
 }
 
