--- a/themes/artistsite/assets/css/src/landing_page.scss
+++ b/themes/artistsite/assets/css/src/landing_page.scss
@@ -12,81 +12,79 @@
 .welcomeContainer {
 	display: block;
 	position: absolute;
-	top: 20%;
+	top: 15%;
 	width: 100%;
 	text-align: center;
 	font-family: Raleway, sans-serif;
 	letter-spacing: 0.2em;
 	z-index: 5;
 	color: white;
-	@media #{$media-mobile} {
-		top: 15%;
+	@media #{$media-desktop} {
+		top: 20%;
 	}
 	> h1 {
 		position: relative;
-		font-size: 4rem;
-		margin: 30px;
-		@media #{$media-mobile} {
-			//text-align: right;
-			margin: 0;
-			font-size: 2rem;
+		font-size: 2rem;
+		margin: 0;
+		@media #{$media-desktop} {
+			margin: 30px;
+			font-size: 4rem;
 		}
 		
 	}
 	> h1 + div {
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		width: 100%;
-		font-size: 2rem;
-		margin-top: 30px;
+		font-size: 1.5rem;
+		margin: 0;
 		> a {
 			color: $splashColor;
 			font-size: 0.75em;
+			line-height: 1em;
+			width: 220px;
 			padding: 15px;
-			margin: 10px;
+			margin: 15px 10px 10px;
 			background: transparent;
 			border: $splashColor 1px solid;
 			border-radius: 3px;
 			&:hover {
-				color: $splashDark;
-				background: $splashColor;
-				
+				color: $splashColor;
+				background: $backgroundColor;
 			}
-
 		}
-		@media #{$media-mobile} {
-			font-size: 1.5rem;
-			flex-direction: column;
-			margin: 0;
+		@media #{$media-desktop} {
+			flex-direction: row;
+			font-size: 2rem;
+			margin: 30px 0 0 0;
 			a {
-				margin-top: 15px;
-				padding: 15px;
-				line-height: 100%;
-				width: 220px;
+				margin: 10px;
+				width: auto;
 				&:hover {
-					color: $splashColor;
-					background: $backgroundColor;
+					color: $splashDark;
+					background: $splashColor;
 				}
 			}
 		}
 	}
 	> ul {
-		display: flex;
-		width: 100%;
+		display: none;
+		width: 80%;
+		max-width: 1000px;
 		flex-direction: row;
 		flex-wrap: wrap;
-		margin-top: 20px;
-		justify-content: center;
+		margin: 20px auto 0;
+		justify-content: space-between;
 		font-size: 0.9rem;
 		font-style: italic;
 		> li {
 			margin: 0 20px 0 20px;
 			letter-spacing: 0.1em;
 		}
-		@media #{$media-mobile} {
-			display: none;
+		@media #{$media-desktop} {
+			display: flex;
 		}
 
 	}
