--- a/themes/artistsite/layouts/base.htm
+++ b/themes/artistsite/layouts/base.htm
@@ -8,6 +8,7 @@ function onStart() {
     'artistsites'=>'/web',
     'instruments'=>'/instruments',
     'music'=>'/music',
+	'research'=>'/research',
     'blog'=>'/writing',
     'github'=>'https://github.com/ctsexton',
     'contact'=>'/contact',
