--- a/themes/artistsite/partials/top-menu.htm
+++ b/themes/artistsite/partials/top-menu.htm
@@ -11,6 +11,7 @@
 			<div id="dropdown--content" class="dropdown--content dropdown--content__closed">
 				<a href="{{ navlinks.artistsites }}">artist sites</a>
 				<a href="{{ navlinks.music }}">music</a>
+				<a href="{{ navlinks.research }}">research</a>
 				<a href="{{ navlinks.github }}">github<img id="git-logo" src="/storage/app/media/github_small.svg"/></a>
 			</div>
 		</div>
