--- a/themes/artistsite/layouts/base-background.htm
+++ b/themes/artistsite/layouts/base-background.htm
@@ -13,6 +13,7 @@ function onStart() {
     'github'=>'https://github.com/ctsexton',
     'contact'=>'/contact',
 	'submit'=>'/submit',
+	'portfolio' => '/portfolio'
     );
 }
 ?>
