--- a/themes/artistsite/assets/css/src/portfolio.scss
+++ b/themes/artistsite/assets/css/src/portfolio.scss
@@ -50,3 +50,26 @@
 		}
 	}
 }
+
+.cp_embed_wrapper {
+	/* required for resize to work */
+	overflow: hidden;
+
+	/* make resizeble! */
+	resize: both;
+
+	/* required to see the handle */
+	background: white;
+	padding-bottom: 10px;
+
+	/* default height */
+	height: 450px;
+	width: 300px;
+	@media #{$medium} {
+		height: 300px;
+		width: 600px;
+	}
+}
+.cp_embed_wrapper iframe {
+height: 100% !important;
+}
