--- a/themes/artistsite/assets/css/src/portfolio.scss
+++ b/themes/artistsite/assets/css/src/portfolio.scss
@@ -13,7 +13,8 @@
 	font-size: 0.7rem;
 	font-weight: 200;
 	line-height: 2em;
-	border-radius: 20px;
+	border-radius: 10px;
+	box-shadow: 10px 10px 50px #bbb;
 	width: 300px;
 	margin: 7px;
 	img {
