portfolio urls open in new tab

--- a/plugins/camsexton/portfolio/components/portfoliogallery/default.htm
+++ b/plugins/camsexton/portfolio/components/portfoliogallery/default.htm
@@ -1,10 +1,10 @@
 {% for sample in __SELF__.portfolio %}
 <div class="sample">
-  <a href="{{ sample.url }}"><img src="{{ sample.sample_pic.getPath() }}"/></a>
+  <a href="{{ sample.url }}" target="_blank"><img src="{{ sample.sample_pic.getPath() }}"/></a>
   <div class="sample--text force-word-wrap">
     <div class="sample--title">{{ sample.title }}</div>
-    <div class="sample--url"><b>URL:</b> <a href="{{ sample.url }}">{{ sample.url }}</a></div>
-    <div class="sample--url"><b>Code:</b> <a href="{{ sample.code_url }}">{{ sample.code_url }}</a></div>
+    <div class="sample--url" ><b>URL:</b> <a href="{{ sample.url }}" target="_blank">{{ sample.url }}</a></div>
+    <div class="sample--url"><b>Code:</b> <a href="{{ sample.code_url }}" target="_blank">{{ sample.code_url }}</a></div>
     <div class="sample--desc">{{ sample.description }}</div>
   </div>
 </div>
